@@ -223,7 +223,7 @@
                   android:id="@+id/amount_more"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:layout_marginTop="4dp"
+                android:layout_marginBottom="2dp"
                   android:onClick="@{() -> formData.moreBaseServings(imageAmount)}"
                   app:icon="@drawable/ic_round_expand_less"
                   app:tint="@color/icon"
@@ -233,7 +233,7 @@
                   android:id="@+id/amount_less"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:layout_marginTop="4dp"
+                  android:layout_marginBottom="2dp"
                   android:layout_marginEnd="12dp"
                   android:onClick="@{() -> formData.lessBaseServings(imageAmount)}"
                   app:icon="@drawable/ic_round_expand_more"
