@@ -24,7 +24,7 @@
     android:id="@+id/action_consume"
     android:title="@string/action_consume"
     android:icon="@drawable/ic_round_restaurant_menu"
-    app:showAsAction="always" />
+    app:showAsAction="ifRoom" />
 
   <item
     android:id="@+id/action_add_not_fulfilled_products_to_cart_for_recipe"
